--- a/css/app.css
+++ b/css/app.css
@@ -107,3 +107,32 @@ h1 {
     float: right;
     cursor: pointer;
 }
+
+
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 0;
+    margin: 0 auto;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.popup-content {
+    background-color: white;
+    margin: 0 auto;
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+    text-align: center;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 1.5s;
+    animation-name: animatetop;
+    animation-duration: 1.5s;
+}
