--- a/css/app.css
+++ b/css/app.css
@@ -109,7 +109,7 @@ h1 {
     cursor: pointer;
 }
 
-
+/* based on w3schools examples */
 .popup {
     display: none;
     position: fixed;
@@ -127,9 +127,9 @@ h1 {
 
 .popup-content {
     background-color: white;
-    margin: 0 auto;
-    height: 100%;
-    width: 100%;
+    margin: 10% auto;
+    height: 80%;
+    width: 80%;
     padding: 20px;
     text-align: center;
     -webkit-animation-name: animatetop;
